- some fixes to BlogRoll spacing and styles - deleted Blog index component

--- a/src/components/BlogRoll.scss
+++ b/src/components/BlogRoll.scss
@@ -11,7 +11,12 @@
   }
 
   header {
-    display: flex;
+    margin-bottom: 24px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 0;
+      display: flex;
+    }
   }
 
   &-title {
