--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -136,7 +136,7 @@ a.breadcrumb__link {
     width: 100%;
     height: 300px;
     object-fit: cover;
-    object-position: top center;
+    object-position: center center;
 
     @media (min-width: 768px) {
       height: 400px;
